Test Getting Rid of .html on file extensions

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <span class="icon-bar"></span>
             </button>
             <!-- Logo -->
-            <a class="navbar-brand" href="index.html"><img class="navbar-logo nav-logo-height" src="assets/images/logo/lds.png" alt="Definity - Logo"></a>
+            <a class="navbar-brand" href="index"><img class="navbar-logo nav-logo-height" src="assets/images/logo/lds.png" alt="Definity - Logo"></a>
           </div>
 
           <!-- Navbar Links -->
@@ -70,7 +70,7 @@
               <li><a href="#process">Process<span class="sr-only"></span></a></li>
               <li><a href="#about">About<span class="sr-only"></span></a></li>
               <li><a href="https://www.medium.com/@Greyz">Blog<span class="sr-only"></span></a></li>
-              <li><a href="pages/contact.html">Contact<span class="sr-only"></span></a></li>
+              <li><a href="pages/contact">Contact<span class="sr-only"></span></a></li>
             </ul><!-- / .nav .navbar-nav -->              
           </div><!--/.navbar-collapse -->
         </nav><!-- / .navbar -->
