Fixed Contact link to Home .html extension

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -62,7 +62,7 @@
           <!-- Navbar Links -->
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
-              <li><a href="../index.html">Home<span class="sr-only"></span></a></li>
+              <li><a href="../index">Home<span class="sr-only"></span></a></li>
               <li><a href="https://www.medium.com/@Greyz">Blog<span class="sr-only"></span></a></li>
             </ul><!-- / .nav .navbar-nav -->              
           </div><!--/.navbar-collapse -->
