Contact form Netlify Fix

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -100,7 +100,7 @@
                     <p>Have a project you would like me to consider or just want to say hello? I would love to hear from you. Use the form below to describe your project.</p>
                   </div>
 
-                  <form action="../assets/contact-form/contact-form.php" method="POST" class="form-minimal form-ajax">
+                  <form name="contact" action="../assets/contact-form/contact-form.php" method="POST" class="form-minimal form-ajax" netlify>
 
                     <!-- Name -->
                     <div class="form-group">
