fixed header greyz link .html extension

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -56,7 +56,7 @@
               <span class="icon-bar"></span>
             </button>
             <!-- Logo -->
-            <a class="navbar-brand" href="../index.html"><img class="navbar-logo nav-logo-height" src="../assets/images/logo/lds.png" alt="GREYZ"></a>
+            <a class="navbar-brand" href="../index"><img class="navbar-logo nav-logo-height" src="../assets/images/logo/lds.png" alt="GREYZ"></a>
           </div>
 
           <!-- Navbar Links -->
