--- a/404.html
+++ b/404.html
@@ -57,12 +57,12 @@
             </div>
 
             <div class="info-wrapper">
-              <p class="info-404">Oops... The page that you are looking<br> for does not exist! Luckily enough we,<br> have some pages that do exist</p>
+              <p class="info-404">Oops... The page that you are looking<br> for does not exist! Luckily enough, here<br> are some pages that do exist!</p>
             </div>
 
             <ul class="links-404">
-              <li><a href="index.html" class="btn btn-light btn-small">Go Back Home</a></li>
-              <li><a href="pages/contact-1.html" class="btn-ghost-light btn-small">Report this</a></li>
+              <li><a href="index" class="btn btn-light btn-small">Go Back Home</a></li>
+              <li><a href="pages/contact" class="btn-ghost-light btn-small">Report this</a></li>
             </ul>
 
           </div>
