Organization and Optimization
Got rid of unnessasary files and made editing things like CSS a little cleaner.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <link rel="stylesheet" href="assets/fonts/linea-font/css/linea-font.css">
         <link rel="stylesheet" href="assets/fonts/fontawesome/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900" rel="stylesheet">
-        <script src="https://use.typekit.net/dcz5kun.js"></script>
-        <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
         <!-- Slider -->
         <link rel="stylesheet" href="assets/styles/vendor/slick.css">
         <!-- Lightbox -->
@@ -26,8 +25,9 @@
         <link rel="stylesheet" href="assets/styles/vendor/animate.css">
 
 
-        <!-- Definity CSS -->
+        <!-- Main CSS -->
         <link rel="stylesheet" href="assets/styles/main.css">
+        <link rel="stylesheet" href="assets/styles/cssedits.css">
         <link rel="stylesheet" href="assets/styles/responsive.css">
 
         <!-- JS -->
@@ -469,12 +469,9 @@
         <script src="assets/js/vendor/jquery.stellar.min.js"></script>
         <script src="assets/js/vendor/jquery.parallax.js"></script>
         <script src="assets/js/vendor/slick.min.js"></script>
-        <script src="assets/js/vendor/jquery.easypiechart.min.js"></script>
-        <script src="assets/js/vendor/countup.min.js"></script>
         <script src="assets/js/vendor/isotope.min.js"></script>
         <script src="assets/js/vendor/jquery.magnific-popup.min.js"></script>
         <script src="assets/js/vendor/wow.min.js"></script>
-        <script src="assets/js/vendor/jquery.ajaxchimp.js"></script>
 
         <!-- Definity JS -->
         <script src="assets/js/main.js"></script>
