--- a/index (OLD).html
+++ b/index (OLD).html
@@ -26,6 +26,7 @@
         <!-- Definity CSS -->
         <link rel="stylesheet" href="assets/styles/main.css">
         <link rel="stylesheet" href="assets/styles/responsive.css">
+        <link rel="stylesheet" href="assets/styles/cssedits.css">
 
         <!-- JS -->
         <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
