--- a/pages/contact.html
+++ b/pages/contact.html
@@ -23,20 +23,16 @@
         <link rel="stylesheet" href="../assets/styles/vendor/animate.css">
 
 
-        <!-- Definity CSS -->
+        <!-- Main CSS -->
         <link rel="stylesheet" href="../assets/styles/main.css">
         <link rel="stylesheet" href="../assets/styles/responsive.css">
+        <link rel="stylesheet" href="../assets/styles/cssedits.css">
 
         <!-- JS -->
         <script src="../assets/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body id="page-top">
         
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-
         <!-- ========== Preloader ========== -->
 
         <div class="preloader">
@@ -198,8 +194,6 @@
         <script src="../assets/js/vendor/jquery.stellar.min.js"></script>
         <script src="../assets/js/vendor/jquery.parallax.js"></script>
         <script src="../assets/js/vendor/slick.min.js"></script>
-        <script src="../assets/js/vendor/jquery.easypiechart.min.js"></script>
-        <script src="../assets/js/vendor/countup.min.js"></script>
         <script src="../assets/js/vendor/isotope.min.js"></script>
         <script src="../assets/js/vendor/jquery.magnific-popup.min.js"></script>
         <script src="../assets/js/vendor/wow.min.js"></script>
