--- a/pages/portfolio/awesome.html
+++ b/pages/portfolio/awesome.html
@@ -23,9 +23,10 @@
         <link rel="stylesheet" href="../../assets/styles/vendor/animate.css">
 
 
-        <!-- Definity CSS -->
+        <!-- Main CSS -->
         <link rel="stylesheet" href="../../assets/styles/main.css">
         <link rel="stylesheet" href="../../assets/styles/responsive.css">
+        <link rel="stylesheet" href="assets/styles/cssedits.css">
 
         <!-- JS -->
         <script src="../../assets/js/vendor/modernizr-2.8.3.min.js"></script>
