--- a/index.html
+++ b/index.html
@@ -110,16 +110,20 @@
 
               <header class="sec-heading">
                 <h2>WHAT I OFFER</h2>
-                <span class="subheading">Peace of mind knowing that your project is taken care of</span>
+                <span class="subheading">Have peace of mind knowing that your project is taken care of</span>
               </header>
               
               <!-- Item 1 -->
               <div class="col-lg-4 col-md-6 mb-sm-50">
                 <div class="ft-item wow fadeInUp" data-wow-duration="1s">
                   <span class="linea-basic-pencil-ruler"></span>
+                  <h4>Website Development</h4>
+                  <p>I strive to help clients clearly communicate their message, service or product through their website by presenting your web content in a clean, visually stunning way to help others build confidence in your brand, company, or organization.</p>
+                  <!--
                   <h4>Web Design</h4>
                   <p>When it comes to web design, I specialize in modern simplicity. Presenting your web content in a clean, visually stunning way is one of the best ways to help others build confidence in your brand, company, or organization.</p>
                   <a href="#">Learn more <span class="linea-arrows-slim-right"></span></a>
+                -->
                 </div>
               </div>
 
@@ -127,9 +131,13 @@
               <div class="col-lg-4 col-md-6 mb-sm-50">
                 <div class="ft-item wow fadeInUp" data-wow-duration="1s" data-wow-delay=".3s">
                   <span class="linea-basic-webpage-multiple"></span>
+                  <h4>Hosting</h4>
+                  <p>Think of me as your very own IT department, with affordable, unlimited hosting, top-of-the-line security, and quick, personalized support. Why go through multiple different services when you only have to go through one?</p>
+                  <!--
                   <h4>Web Development</h4>
                   <p>Having a great web design is only the first step. I also ensure that your project is fully developed from the ground up using the latest development technologies while guaranteeing an easy-to-use, mobile-friendly interface.</p>
                   <a href="#">Learn more <span class="linea-arrows-slim-right"></span></a>
+                  -->
                 </div>
               </div>
 
@@ -137,9 +145,8 @@
               <div class="col-lg-4 col-md-6 mb-sm-50">
                 <div class="ft-item wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                   <span class="linea-basic-picture"></span>
-                  <h4>Graphic Design</h4>
-                  <p>I consider design to be just as important as development and aim to combine both to produce high-quality user experiences. My extensive experience using industry-standard design tools puts you in good hands.</p>
-                  <a href="#">Learn more <span class="linea-arrows-slim-right"></span></a>
+                  <h4>Branding</h4>
+                  <p>My branding process includes logo design, brand guidelines with color palette and fonts, and suggestions for implementation. Everything necessary to represent your company's new image and quality appearance.</p>
                 </div>
               </div>
 
