--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 
                 <h4 class="h-alt hero-subheading wow fadeIn" data-wow-duration="2s" data-wow-delay=".7s">Freelance Web Designer/Developer and Graphic Designer</h4>
                 <h1 class="hero-lead wow fadeInUp greyson" data-wow-duration="1.5s">Greyson Zittle</h1>
-                <a href="pages/contact.html" target="_blank" class="btn btn-light btn-small wow fadeIn" data-wow-duration="2s" data-wow-delay="1s">Request Project</a>
+                <a href="pages/contact.html" target="_blank" class="btn btn-light btn-small wow fadeIn" data-wow-duration="2s" data-wow-delay="1s">View Portfolio</a>
 
               </div>
             </div>
