--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
           <div id="navbar" class="navbar-collapse collapse page-scroll navbar-right">
             <ul class="nav navbar-nav">
               <li><a href="#home">Home<span class="sr-only"></span></a></li>
-              <li><a href="#services">Services<span class="sr-only"></span></a></li>
-              <li><a href="#process">Process<span class="sr-only"></span></a></li>
+              <!--<li><a href="#services">Services<span class="sr-only"></span></a></li>-->
+              <!--<li><a href="#process">Process<span class="sr-only"></span></a></li>-->
               <li><a href="#about">About<span class="sr-only"></span></a></li>
-              <li><a href="https://www.medium.com/@Greyz">Blog<span class="sr-only"></span></a></li>
+              <!--<li><a href="https://www.medium.com/@Greyz">Blog<span class="sr-only"></span></a></li>-->
               <li><a href="pages/contact">Contact<span class="sr-only"></span></a></li>
             </ul><!-- / .nav .navbar-nav -->              
           </div><!--/.navbar-collapse -->
@@ -86,7 +86,7 @@
             <div class="hero-content-wrapper">
               <div class="hero-content">
                 
-                <h4 class="h-alt hero-subheading wow fadeIn" data-wow-duration="2s" data-wow-delay=".7s">Freelance Web Designer/Developer and Graphic Designer</h4>
+                <h4 class="h-alt hero-subheading wow fadeIn" data-wow-duration="2s" data-wow-delay=".7s">Web Designer/Developer and Graphic Designer</h4>
                 <h1 class="hero-lead wow fadeInUp greyson" data-wow-duration="1.5s">Greyson Zittle</h1>
                 <a href="pages/contact.html" target="_blank" class="btn btn-light btn-small wow fadeIn" data-wow-duration="2s" data-wow-delay="1s">View Portfolio</a>
 
@@ -137,7 +137,7 @@
 
               <div class="col-lg-4 freelancer-about-content">
                 <h2 class="t1-heading">About me</h2>
-                <p>My name is Greyson Zittle, and I'm a freelance media creator. I help businesses and other freelancers bring out their maximum potential online. When I'm not working as a designer, you can find me working about on other projects, and learning new skills. When it comes to media, you name it, I've done it. I've got extensive experience in professional audio production (6+ years), video production (3+ years), and even IT (basically life).</p>
+                <p>My name is Greyson Zittle, and I'm a digital media creator. When I'm not working as a designer, you can find me working about on other projects, and learning new skills. When it comes to media, you name it, I've done it. I've got extensive experience in professional audio production (8+ years), video production (4+ years), and even IT (basically life).</p>
                 <p>On a more personal level, when I'm not working on new projects, I work full time as a friend to people who are crazy enough to be my friend and volunteering at several local Christian churches as both a musician, and tech guy. I love helping people to the best of my ability, no matter what it takes. Most importantly: <strong>I love to learn.</strong></p>
               </div>
 
