--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   <!-- Info -->
                   <div class="t-info">
                     <h4 class="t-name">Greyson Zittle</h4>
-                    <span class="t-role">Freelance Media Creator</span>
+                    <span class="t-role">Digital Media Creator</span>
                     <ul class="social-links">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
@@ -252,9 +252,303 @@
                 </figure>
               </div><!-- / .portfolio-item -->
 
+              <!-- Item 7 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amy.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amy Alber | Mary Kay</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amy.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <!--<li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>-->
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 8 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 9 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 10 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 11 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 12 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 13 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 14 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 15 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 16 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 17 -->
+              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+                <figure>
+                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Amplify</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
             </div><!-- / #pfolio -->
           </div><!-- / .row -->
         </section><!-- / .portfolio-columns-fw -->
+
+        <!-- Item 18 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
+
+        <!-- Item 19 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
+
+        <!-- Item 20 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
+
+        <!-- Item 21 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
+
+        <!-- Item 22 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
+
+        <!-- Item 23 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
+
+        <!-- Item 24 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
+
+        <!-- Item 25 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
+
+        <!-- Item 26 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
+
+        <!-- Item 27 -->
+        <div class="col-md-4 portfolio-item hover-bottom webdesign">
+          <figure>
+            <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
+            <figcaption>
+              <h4 class="hover-heading">Amplify</h4>
+              <ul class="hover-btns">
+                <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
+              </ul>
+            </figcaption>
+          </figure>
+        </div><!-- / .portfolio-item -->
 
 
 
