--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 8 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/ekyn.jpg" alt="Project Example">
                   <figcaption>
@@ -275,7 +275,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 9 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/legacy.jpg" alt="Project Example">
                   <figcaption>
@@ -288,7 +288,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 10 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/lion.jpg" alt="Project Example">
                   <figcaption>
@@ -301,7 +301,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 11 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/wlctt.jpg" alt="Project Example">
                   <figcaption>
@@ -314,7 +314,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 12 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/kidzone.jpg" alt="Project Example">
                   <figcaption>
@@ -327,7 +327,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 13 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/easterl.jpg" alt="Project Example">
                   <figcaption>
@@ -340,7 +340,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 14 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/easterd.jpg" alt="Project Example">
                   <figcaption>
@@ -353,7 +353,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 15 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/heroes.jpg" alt="Project Example">
                   <figcaption>
@@ -366,7 +366,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 16 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/online.jpg" alt="Project Example">
                   <figcaption>
@@ -379,21 +379,8 @@
                 </figure>
               </div><!-- / .portfolio-item -->
 
-              <!-- Item 17 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
-                <figure>
-                  <img src="assets/images/portfolio/mothers.jpg" alt="Project Example">
-                  <figcaption>
-                    <h4 class="hover-heading">Mothers Day 2017</h4>
-                    <ul class="hover-btns">
-                      <li><a class="open-gallery" href="assets/images/portfolio/mothers.jpg"><i class="fa fa-arrows-alt"></i></a></li>
-                    </ul>
-                  </figcaption>
-                </figure>
-              </div><!-- / .portfolio-item -->
-
               <!-- Item 18 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/lightwood.jpg" alt="Project Example">
                   <figcaption>
@@ -406,7 +393,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 19 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/beard.jpg" alt="Project Example">
                   <figcaption>
@@ -419,7 +406,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 20 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/ignite.jpg" alt="Project Example">
                   <figcaption>
@@ -458,7 +445,7 @@
               </div><!-- / .portfolio-item -->
 
               <!-- Item 23 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/spice.jpg" alt="Project Example">
                   <figcaption>
@@ -470,22 +457,8 @@
                 </figure>
               </div><!-- / .portfolio-item -->
 
-              <!-- Item 24 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
-                <figure>
-                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
-                  <figcaption>
-                    <h4 class="hover-heading">Amplify</h4>
-                    <ul class="hover-btns">
-                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
-                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
-                    </ul>
-                  </figcaption>
-                </figure>
-              </div><!-- / .portfolio-item -->
-
               <!-- Item 25 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
+              <div class="col-md-4 portfolio-item hover-bottom graphicdesign">
                 <figure>
                   <img src="assets/images/portfolio/eyt.jpg" alt="Project Example">
                   <figcaption>
@@ -510,24 +483,6 @@
                   </figcaption>
                 </figure>
               </div><!-- / .portfolio-item -->
-
-              <!-- Item 27 -->
-              <div class="col-md-4 portfolio-item hover-bottom webdesign">
-                <figure>
-                  <img src="assets/images/portfolio/amplify.jpg" alt="Project Example">
-                  <figcaption>
-                    <h4 class="hover-heading">Amplify</h4>
-                    <ul class="hover-btns">
-                      <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
-                      <li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>
-                    </ul>
-                  </figcaption>
-                </figure>
-              </div><!-- / .portfolio-item -->
-
-            </div><!-- / #pfolio -->
-          </div><!-- / .row -->
-        </section><!-- / .portfolio-columns-fw -->
 
 
 
