--- a/index.html
+++ b/index.html
@@ -483,6 +483,9 @@
                   </figcaption>
                 </figure>
               </div><!-- / .portfolio-item -->
+</div>
+</div>
+</section>
 
 
 
