--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
               <!-- Item 7 -->
               <div class="col-md-4 portfolio-item hover-bottom webdesign">
                 <figure>
-                  <img src="assets/images/portfolio/amy.jpg" alt="Project Example">
+                  <img src="assets/images/portfolio/amy.jpg" alt="Project Examiple">
                   <figcaption>
-                    <h4 class="hover-heading">Amy Alber | Mary Kay</h4>
+                    <h4 class="hover-heading">Amy Alber | Landing Page</h4>
                     <ul class="hover-btns">
                       <li><a class="open-gallery" href="assets/images/portfolio/amy.jpg"><i class="fa fa-arrows-alt"></i></a></li>
                       <!--<li><a href="pages/portfolio/amplify.html"><i class="fa fa-share"></i></a></li>-->
@@ -512,13 +512,13 @@
             <address>
               <ul>
                 <!-- Address -->
-                <li>
+                <!-- <li>
                   <span class="linea-basic-map adr-icon"></span>
                   <div class="adr-group">
                     <span class="adr-heading">Address</span>
                     <span class="adr-info">Remote</span>
                   </div>
-                </li>
+                </li> -->
 
                 <!-- Email -->
                 <li>
@@ -548,8 +548,8 @@
               <div class="row">
                 
                 <ul>
-                  <li><a href="#">facebook</a></li>
-                  <li><a href="#">YouTube</a></li>
+                  <!-- <li><a href="#">facebook</a></li>
+                  <li><a href="#">YouTube</a></li> -->
                   <li><a href="http://www.medium.com/@greyz">Medium</a></li>
                 </ul>
 
