--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     <h4 class="hover-heading">Amplify | Tech and Worship Conference</h4>
                     <ul class="hover-btns">
                       <li><a class="open-gallery" href="assets/images/portfolio/amplify.jpg"><i class="fa fa-arrows-alt"></i></a></li>
-                      <li><a href="https://amplify.netlify.com/"><i class="fa fa-share"></i></a></li>
+                      <li><a href="https://amplify.netlify.com/" target="_blank"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
