--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                     <h4 class="hover-heading">Church Website Promo</h4>
                     <ul class="hover-btns">
                       <li><a class="open-gallery" href="assets/images/portfolio/online.jpg"><i class="fa fa-arrows-alt"></i></a></li>
-                      <li><a href="https://www.winnlbc.com/" target="_blank"><i class="fa fa-share"></i></a></li>
+                      <li><a href="http://www.winnlbc.com/" target="_blank"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
