--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
                 <ul>
                   <!-- <li><a href="#">facebook</a></li>
                   <li><a href="#">YouTube</a></li> -->
-                  <li><a href="http://www.medium.com/@greyz">Medium</a></li>
+                  <li><a href="http://www.medium.com/@greyz" target="_blank">Medium</a></li>
                 </ul>
 
               </div>
@@ -564,7 +564,7 @@
               <div class="row">
                 
                 <div class="col-md-6">
-                  <small>&copy; Copyright 2017, GREYZ</small>
+                  <small>&copy; Copyright 2018, GREYZ</small>
                 </div>
 
                 <div class="col-md-6">
