--- a/pages/contact.html
+++ b/pages/contact.html
@@ -147,8 +147,9 @@
             <div class="row">
               
               <ul>
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">YouTube</a></li>
+                <!-- <li><a href="#">Facebook</a></li>
+                <li><a href="#">YouTube</a></li> -->
+                <li><a href="http://www.medium.com/@greyz" target="_blank">Medium</a></li>
               </ul>
 
             </div>
@@ -165,7 +166,7 @@
               <div class="row">
                 
                 <div class="col-md-6">
-                  <small>&copy; Copyright 2017, GREYZ</small>
+                  <small>&copy; Copyright 2018, GREYZ</small>
                 </div>
 
                 <div class="col-md-6">
