--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
             <!-- Scroller -->
-            <a href="#services" class="scroller">
+            <a href="#about" class="scroller">
               <span class="scroller-text">scroll down</span>
               <span class="linea-basic-magic-mouse"></span>
             </a>
