--- a/index.html
+++ b/index.html
@@ -124,12 +124,12 @@
                   <div class="t-info">
                     <h4 class="t-name">Greyson Zittle</h4>
                     <span class="t-role">Digital Media Creator</span>
-                    <ul class="social-links">
+                    <!-- <ul class="social-links">
                       <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                       <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
                       <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                    </ul>
+                    </ul> -->
                   </div>
 
                 </div><!-- / .t-item -->
