--- a/index.html
+++ b/index.html
@@ -483,6 +483,34 @@
                   </figcaption>
                 </figure>
               </div><!-- / .portfolio-item -->
+
+              <!-- Item 26 -->
+              <div class="col-md-4 portfolio-item hover-bottom videography">
+                <figure>
+                  <img src="assets/images/portfolio/cr.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">Randy Carnock | Celebrate Recovery</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="https://www.youtube.com/watch?v=o9iAsWJS-DI&t=55s"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="https://www.youtube.com/watch?v=o9iAsWJS-DI&t=55s" target="_blank"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
+
+              <!-- Item 26 -->
+              <div class="col-md-4 portfolio-item hover-bottom videography">
+                <figure>
+                  <img src="assets/images/portfolio/rlleek.jpg" alt="Project Example">
+                  <figcaption>
+                    <h4 class="hover-heading">R.L. Leek Industries</h4>
+                    <ul class="hover-btns">
+                      <li><a class="open-gallery" href="assets/images/portfolio/rlleek.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="https://www.rlleek.com/" target="_blank"><i class="fa fa-share"></i></a></li>
+                    </ul>
+                  </figcaption>
+                </figure>
+              </div><!-- / .portfolio-item -->
 </div>
 </div>
 </section>
