--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
               <li class="active"><a href="#" data-filter="*">All</a></li>
               <li><a href="#" data-filter=".webdesign">Web Design</a></li>
               <li><a href="#" data-filter=".graphicdesign">Graphic Design</a></li>
+              <li><a href="#" data-filter=".videography">Videography</a></li>
             </ul>
           </div>
 
@@ -489,9 +490,9 @@
                 <figure>
                   <img src="assets/images/portfolio/cr.jpg" alt="Project Example">
                   <figcaption>
-                    <h4 class="hover-heading">Randy Carnock | Celebrate Recovery</h4>
+                    <h4 class="hover-heading">Randy Carnock Testimony | Celebrate Recovery</h4>
                     <ul class="hover-btns">
-                      <li><a class="open-gallery" href="https://www.youtube.com/watch?v=o9iAsWJS-DI&t=55s"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a class="open-gallery" href="assets/images/portfolio/cr.jpg"><i class="fa fa-arrows-alt"></i></a></li>
                       <li><a href="https://www.youtube.com/watch?v=o9iAsWJS-DI&t=55s" target="_blank"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
@@ -501,12 +502,12 @@
               <!-- Item 26 -->
               <div class="col-md-4 portfolio-item hover-bottom videography">
                 <figure>
-                  <img src="assets/images/portfolio/rlleek.jpg" alt="Project Example">
+                  <img src="assets/images/portfolio/ocoee.jpg" alt="Project Example">
                   <figcaption>
-                    <h4 class="hover-heading">R.L. Leek Industries</h4>
+                    <h4 class="hover-heading">Ocoee Outreach 2017 Recap</h4>
                     <ul class="hover-btns">
-                      <li><a class="open-gallery" href="assets/images/portfolio/rlleek.jpg"><i class="fa fa-arrows-alt"></i></a></li>
-                      <li><a href="https://www.rlleek.com/" target="_blank"><i class="fa fa-share"></i></a></li>
+                      <li><a class="open-gallery" href="assets/images/portfolio/ocoee.jpg"><i class="fa fa-arrows-alt"></i></a></li>
+                      <li><a href="https://www.youtube.com/watch?v=kDuKdmtsdi4&t=3s" target="_blank"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
