--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <h4 class="hover-heading">R.L. Leek Industries</h4>
                     <ul class="hover-btns">
                       <li><a class="open-gallery" href="assets/images/portfolio/rlleek.jpg"><i class="fa fa-arrows-alt"></i></a></li>
-                      <li><a href="https://www.rlleek.com/" target="_blank"><i class="fa fa-share"></i></a></li>
+                      <li><a href="https://www.rlleek.greyzweb.com/" target="_blank"><i class="fa fa-share"></i></a></li>
                     </ul>
                   </figcaption>
                 </figure>
