--- a/pages/contact.html
+++ b/pages/contact.html
@@ -96,7 +96,7 @@
                     <p>Have a project you would like me to consider or just want to say hello? I would love to hear from you. Use the form below to describe your project.</p>
                   </div>
 
-                  <form name="contact" action="../assets/contact-form/contact-form.php" method="POST" class="form-minimal form-ajax" netlify-honeypot="bot-field" netlify-recaptcha netlify>
+                  <form name="contact" action="../assets/contact-form/contact-form.php" method="POST" class="form-minimal form-ajax" netlify-honeypot="bot-field" netlify>
 
                     <p class="hidden">
                       <label>Don’t fill this out if you're human: <input name="bot-field" /></label>
