--- a/pages/contact.html
+++ b/pages/contact.html
@@ -96,7 +96,14 @@
                     <p>Have a project you would like me to consider or just want to say hello? I would love to hear from you. Use the form below to describe your project.</p>
                   </div>
 
-                  <form name="contact" action="../assets/contact-form/contact-form.php" method="POST" class="form-minimal form-ajax" netlify>
+                  <form name="contact" action="../assets/contact-form/contact-form.php" method="POST" netlify-honeypot="bot-field" class="form-minimal form-ajax" netlify>
+
+                    <!-- Honeypot Field -->
+                    <div class="form-group hidden">
+                      <input type="text" name="bot-field" class="form-control validate-locally">
+                      <label for="name-contact-3">Don't fill this out if you're human</label>
+                      <span class="pull-right alert-error"></span>
+                    </div>
 
                     <!-- Name -->
                     <div class="form-group">
